# social_auth

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.MD
social_auth/: Cargo.toml
social_auth/public/: index.html
social_auth/public/js/: index.js
social_auth/src/: api.rs  error.rs  main.rs  templates.rs  twitch_config.rs  twitter_config.rs
social_auth/templates/: index.html.hbs  login.html.hbs
src/: api.rs  error.rs  main.rs
templates/: index.html.hbs
