[package]
name = "social_auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.16.0", features = ["rustls"], default-features = false}
rocket = {version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"]}
reqwest = { version = "0.11.5", features = ["json", "rustls-tls"]}
rand = "0.8.4"
